WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188027
WebSiteData-related methods should take in CompletionHandlers instead of Functions
https://bugs.webkit.org/show_bug.cgi?id=188027
Summary
WebSiteData-related methods should take in CompletionHandlers instead of Func...
Chris Dumez
Reported
2018-07-25 16:11:37 PDT
WebSiteData-related methods should take in CompletionHandlers instead of Functions since they are need to be called and are only called once.
Attachments
Patch
(22.60 KB, patch)
2018-07-25 16:25 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-07-25 16:25:21 PDT
Created
attachment 345799
[details]
Patch
EWS Watchlist
Comment 2
2018-07-25 16:27:02 PDT
Attachment 345799
[details]
did not pass style-queue: ERROR: Source/WebKit/UIProcess/Network/NetworkProcessProxy.h:77: The parameter name "completionHandler" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit/UIProcess/Storage/StorageProcessProxy.cpp:105: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Storage/StorageProcessProxy.cpp:115: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:146: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:165: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Storage/StorageProcessProxy.h:98: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Storage/StorageProcessProxy.h:99: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Storage/StorageProcessProxy.h:100: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/WebProcessProxy.cpp:251: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/WebProcessProxy.h:164: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Plugins/PluginProcessProxy.h:81: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Plugins/PluginProcessProxy.h:82: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Plugins/PluginProcessProxy.h:83: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Plugins/PluginProcessProxy.h:154: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Plugins/PluginProcessProxy.h:161: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Plugins/PluginProcessProxy.h:168: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Plugins/PluginProcessProxy.cpp:116: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Plugins/PluginProcessProxy.cpp:129: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit/UIProcess/Plugins/PluginProcessProxy.cpp:142: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 19 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2018-07-26 09:15:36 PDT
Comment on
attachment 345799
[details]
Patch Clearing flags on attachment: 345799 Committed
r234261
: <
https://trac.webkit.org/changeset/234261
>
WebKit Commit Bot
Comment 4
2018-07-26 09:15:38 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-07-26 09:16:24 PDT
<
rdar://problem/42626196
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug